# flowstate

./: .gitignore  DEV_NOTES.md  DOCKER_COMMANDS.md  Dockerfile  README.md  SWARM_GUIDE.md  UPGRADE_NOTES.md  claude-flow-orchestrator.sh  docker-compose.yml  docker-entrypoint.sh  flowstate-comprehensive-swarm.json  flowstate-debug-analysis-swarm.json  flowstate-quick-improvements-swarm.json  flowstate-server-workflow.json  flowstate-upgrade-swarm.json  pyproject.toml  requirements.txt  run-comprehensive-upgrade.sh  run.sh  test_input_simple.py  test_input_video.py  test_viewer.py  test_web_server.py
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
docs/: ARCHITECTURE.md
src/cli/: app.py
src/core/: analyzer.py  config.py  downloader.py  exceptions.py  publisher.py  server.py
src/utils/: decorators.py  validators.py
src/viewer/: README.md  builder.py  dev_server.py
src/viewer/template/: data.js  enhanced_viewer.html  enhanced_viewer.js  index.html
